fix left side gap issue

--- a/src/styles/pages/_home - Copy.scss
+++ b/src/styles/pages/_home - Copy.scss
@@ -442,9 +442,9 @@ button.carousel-control-prev, button.carousel-control-next {
   justify-content: center;
   padding: 1rem;
   position: absolute;
-  left: 86%;
-  transform: translateX(-50%);
-  width: 100%;
+  // left: 86%;
+  // transform: translateX(-50%);
+  // width: 100%;
   /* max-width: 500px; */
 }
 
