--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -444,9 +444,10 @@ button.carousel-control-prev, button.carousel-control-next {
   justify-content: center;
   padding: 1rem;
   position: absolute;
-  left: 86%;
-  transform: translateX(-50%);
-  width: 100%;
+  right: 30px;
+  // left: 86%;
+  // transform: translateX(-50%);
+  // width: 100%;
   /* max-width: 500px; */
 }
 
